- Implement "Current Run" / "Last Run" tab that changes based on `yt-dlp` execution status
- Implement in-memory session log tracking with real-time capture from subprocess output
- Use monospaced Consolas font for log display and Technical Details tabs
- Change log viewer to non-modal dialog allowing main window interaction
- Add real-time log display updates as `yt-dlp` output is processed
- Add automatic log viewer cleanup when main window closes or on Ctrl+Q

Memory Management:

- Fix double-free vulnerabilities in cleanup functions by NULLing pointers after freeing

URL Validation:

- Add validation to Get Info and Download buttons to reject invalid URLs
- Reject multiple space-separated URLs and YouTube playlist URLs
- Display informative error dialogs explaining supported URL formats

Cache ListView Enhancements:

- Add column header sorting with ascending/descending toggle
- Add comprehensive right-click context menu with Delete, Copy operations, and Select All
- Add `Del` and `Ctrl+C` keyboard accelerators
- Implement Edit menu with focus-aware enabling for `ListView` and edit controls
- Add Copy Title, Copy Path, and Copy YouTube URL menu items
- Disable Copy operations when multiple items are selected

HiDPI Support:

- Add centralized DPI management system with `DPIManager` and per-window `DPIContext` tracking
- Implement per-monitor DPI awareness v2 with fallback chain for older Windows versions
- Add dynamic DPI change handling via `WM_DPICHANGED` for all windows and dialogs
- Implement font scaling system with `FontManager` for automatic font rescaling on DPI changes
- Implement icon scaling system with `IconManager` for multi-size icon support
- Add window position persistence using DPI-independent logical coordinates
- Fix DPI change layout drift by recalculating from window dimensions instead of scaling positions
- Add custom About dialog layout recalculation for proper DPI scaling

Accessibility and Keyboard Navigation:
